--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ nb-configuration.xml
 
 # Local environment
 .env
+/.mvn/wrapper/MavenWrapperDownloader.java
+/.mvn/wrapper/maven-wrapper.properties
+/.mvn/wrapper/maven-wrapper.jar
